--- a/packages/swagger-ui-v3/package.json
+++ b/packages/swagger-ui-v3/package.json
@@ -37,6 +37,7 @@
     "@vitejs/plugin-react": "^1.0.7",
     "tailwindcss": "^3.3.1",
     "typescript": "5.2.2",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-plugin-svgr": "4.1.0"
   }
 }
